@@ -26,6 +26,7 @@ tags
 tags-e
 
 bzImage
+bzImage.iso
 vmSandix
 System.map
 
